# gcal-syncer

./: .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml
.github/workflows/: cron_syncer.yml  run_syncer.yml  tests.yml
syncer/: calendar.py  formats.py  helper.py  logger.py  main.py
syncer/dataclasses/: calendar.py
tests/: test_calendar.py  test_helper.py  test_main.py
